fix clientside error spam